# mandelbrot2

./: index.html  package-lock.json  package.json
crate/: Cargo.toml
crate/src/: lib.rs
js/: index.js
