[package]
authors = ["Brent"]
categories = ["wasm"]
description = "Mandelbrot set generation"
license = "MIT"
name = "mandelbrot2"
readme = "./README.md"
repository = "https://github.com/rowland/mandelbrot2"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.25"
url = "1.7.2"
js-sys = "0.3.22"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.5", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",
  "HtmlCanvasElement",
  "CssStyleDeclaration",
  "Location",
  "CanvasRenderingContext2d",
  "ImageData",
  "DateTimeValue",
]

[features]
default = ["console_error_panic_hook"]
